# CCScriptWriter

./: pyproject.toml
CCScriptWriter/: .pylintrc  CCScriptWriter.py
