[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "CCScriptWriter"
version = "1.3"
description = "Extracts the dialogue from EarthBound and outputs it into a CCScript file."
dependencies = [
    "PyYAML>=3.11",
]
requires-python = ">=3.8"

[project.urls]
GitHub = "https://github.com/pk-hack/CCScriptWriter"

[project.scripts]
ccscriptwriter = "CCScriptWriter.CCScriptWriter:main"
